--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "capilog-frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JuanZea/capilog-frontend.git"
+  "dependencies": {
+    "vue": "^3.2.25"
   },
-  "keywords": [],
-  "contributors": [
-    {
-      "name" : "Juan Zea",
-      "email" : "juan.zeaa@udea.edu.co",
-      "url" : "https://github.com/JuanZea"
-    }
-  ],
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JuanZea/capilog-frontend/issues"
-  },
-  "homepage": "https://github.com/JuanZea/capilog-frontend#readme"
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.0.0",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vue-tsc": "^0.29.8"
+  }
 }
