docs: Roy added as contributor

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
       "name": "Juan Zea",
       "email": "juan.zeaa@udea.edu.co",
       "url": "https://github.com/JuanZea"
+    },
+    {
+      "name": "Roy Maestre",
+      "email": "roy.maestre@udea.edu.co",
+      "url": "https://github.com/Royk8"
     }
   ],
   "dependencies": {
