docs: Jhonier added

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
       "name": "Roy Maestre",
       "email": "roy.maestre@udea.edu.co",
       "url": "https://github.com/Royk8"
+    },
+    {
+      "name": "Jhonier Córdoba",
+      "email": "jhonier.cordoba@udea.edu.co",
+      "url": "https://github.com/JhonierCordoba"
     }
   ],
   "dependencies": {
