--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+	"lint": "npx prettier --write .",
+	"lint:check": "npx prettier --check ."
   },
   "contributors": [
     {
@@ -30,6 +32,8 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
