--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-	"lint": "npx prettier --write .",
-	"lint:check": "npx prettier --check ."
+    "lint": "npx prettier --write .",
+    "lint:check": "npx prettier --check ."
   },
   "contributors": [
     {
@@ -26,9 +26,11 @@
     }
   ],
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
