--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
