--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "npx prettier --write .",
-    "lint:check": "npx prettier --check ."
+    "lint:check": "npx prettier --check .",
+    "test": "jest"
   },
   "contributors": [
     {
@@ -33,12 +34,17 @@
   "devDependencies": {
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/jest": "^27.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
     "autoprefixer": "^10.4.2",
+    "jest": "^27.5.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.15",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
