--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
 		"jsx": "preserve",
 		"sourceMap": true,
 		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		
+		"esModuleInterop": true
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
