--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview",
     "lint": "npx prettier --write .",
     "lint:check": "npx prettier --check .",
-    "test": "jest"
+    "test": "jest",
+    "test:f": "jest -t"
   },
   "contributors": [
     {
