--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.4.4",
+    "vee-validate": "^4.5.9",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "yup": "^0.32.11"
   }
 }
