--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
+    "date-fns": "^2.28.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
