--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
 		"jsx": "preserve",
 		"sourceMap": true,
 		"resolveJsonModule": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"paths": {
+            "@/*": ["./src/*"]
+        }
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
